feat: css hover

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -146,6 +146,10 @@ body {
   cursor: pointer;
 }
 
+.search-button:hover {
+  background-color: #0844a0; 
+}
+
 .no-data {
   text-align: center;
   color: #aaa;
